--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <section class="container">
             <div class=" row banner">
                 <div class="banner-text col-md-6 my-5">
-                    <h1 class="display-2 fw-bold text-danger">Be the Penguins <br>
+                    <h1 class="display-2 fw-bold">Be the Penguins <br>
                         <span class="text-black">of Winter</span>
                     </h1>
                     <p>Lorem Ipsum is simply dummy text of the printing <br>
                         and typesetting industry.
                     </p>
-                        <button type="button" class="btn btn-lg btn-info text-white"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                        <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
                 </div>
                 <div class="banner-img col-md-6">
                     <img src="images/model.png" alt="">
@@ -60,50 +60,153 @@
                 </div>
             </div>
         </section>
-        <section class="container">
-            <h2>W0Man Jacket</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+        <section class="container product-section">
+            <h2 class="card-sec-h2">W0Man Jacket</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 product-row">
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="images/jacket-1.png" class="card-img-top" alt="...">
+                  <div class="card h-100 p-3 product-card shadow">
+                    <div class="p-3 card-img">
+                      <img src="images/jacket-1.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body">
-                      <h5 class="card-title fw-bold">Yellow Coat Jacket </h5>
+                      <h5 class="card-title card-title-h5">Yellow Coat Jacket </h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to .</p>
                       <div class="d-flex justify-content-between align-items-center">
-                          <span class="fw-bold fs-2">$234</span>
-                          <button type="button" class="btn btn-lg btn-info text-white"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                          <span class="price-text">$234</span>
+                          <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
+                  <div class="card h-100 p-3 product-card shadow">
+                    <div class="p-3 card-img">
+                      <img src="images/jacket-2.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a short card.</p>
+                      <h5 class="card-title card-title-h5">Yellow Coat Jacket </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to .</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <span class="price-text">$234</span>
+                          <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                      </div>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <div class="card h-100 p-3 product-card shadow">
+                    <div class="p-3 card-img">
+                      <img src="images/jacket-3.png" class="card-img-top" alt="...">
                     </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title card-title-h5">Yellow Coat Jacket </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to .</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <span class="price-text">$234</span>
+                          <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
+        </section>
+        <section class="container product-section">
+            <h2 class="card-sec-h2">Man Jacket</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 product-row">
+                <div class="col">
+                  <div class="card h-100 p-3 product-card shadow">
+                    <div class="p-3 card-img">
+                      <img src="images/jacket-4.png" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title card-title-h5">Yellow Coat Jacket </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to .</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <span class="price-text">$234</span>
+                          <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 p-3 product-card shadow">
+                    <div class="p-3 card-img">
+                      <img src="images/jacket-5.png" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title card-title-h5">Yellow Coat Jacket </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to .</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <span class="price-text">$234</span>
+                          <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 p-3 product-card shadow">
+                    <div class="p-3 card-img">
+                      <img src="images/jacket-6.png" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title card-title-h5">Yellow Coat Jacket </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to .</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <span class="price-text">$234</span>
+                          <button type="button" class="btn btn-lg buy-button"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <section class="container-fluid">
+          <div class="row justify-content-center w-100 bg-dark mx-auto">
+            <div class="col-lg-6 bg-primary col-12">
+              <div class="card mx-auto shadow mb-3 horzontal-card">
+                <div class="row g-0 d-flex align-items-center">
+                  <div class="col-md-4">
+                    <img src="images/house.png" class="w-50 mx-auto d-block" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title fw-bold fs-3">Find the Perfect Fit</h5>
+                      <p class="card-text">Everybody is different, which is why we
+                        offer styles for every body.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card shadow mb-3 horzontal-card" style="">
+                <div class="row g-0 d-flex align-items-center">
+                  <div class="col-md-4">
+                    <img src="images/box.png" class="w-50 mx-auto d-block" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title fw-bold fs-3">Find the Perfect Fit</h5>
+                      <p class="card-text">Everybody is different, which is why we
+                        offer styles for every body.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3 shadow horzontal-card" style="">
+                <div class="row g-0 d-flex align-items-center">
+                  <div class="col-md-4">
+                    <img src="images/question.png" class="w-50 mx-auto d-block" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title fw-bold fs-3">Find the Perfect Fit</h5>
+                      <p class="card-text">Everybody is different, which is why we
+                        offer styles for every body.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
     </main>
